[package]
name = "remouse"
version = "0.1.0"
edition = "2024"
authors = ["El Mundos <taber.nandez.sergio@gmail.com>"]
description = "Linux input event filter for fixing faulty mouse hardware through software debouncing"
repository = "https://github.com/El-Mundos/remouse"
homepage = "https://github.com/El-Mundos/remouse"
documentation = "https://docs.rs/remouse"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mouse", "input", "debounce", "linux", "hardware"]
categories = ["hardware-support", "command-line-utilities"]
rust-version = "1.85"

[dependencies]
libc = "0.2.182"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[[bin]]
name = "remouse"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
